created header section

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
             <!-- hero section -->
             <div
-                class="hero w-11/12 rounded-4xl mx-auto my-10 h-90 lg:h-140 xl:h-160 2xl:h-170 2xl:w-8/12"
+                class="hero w-11/12 rounded-4xl mx-auto my-10 h-90 lg:h-140 xl:h-160 2xl:h-170 2xl:w-9/12"
                 style="
                     background-image: url(./images/banner.png);
                 "
@@ -119,6 +119,61 @@
                     </div>
                 </div>
             </div>
+
+            <!-- achievement section -->
+            <div class="achievement-section flex flex-col items-center gap-5 md:flex-row w-10/12 mx-auto md:justify-center md:gap-10 md:-mt-20 lg:-mt-26">
+                <div class="registered-users h-32 w-80 border-2 border-lime-500 rounded-3xl bg-white md:border-b-2 md:border-t-0 md:border-x-0 flex items-center justify-center gap-5">
+                    <i class="achievement-icons fa-solid fa-users-line text-3xl"></i>
+                    <div class="achieve-text-container">
+                        <p class="achievement-large-text text-4xl font-bold">500K+</p>
+                        <p class="achievement-small-text text-lg">Registered Users</p>
+                    </div>
+                </div>
+                <div class="ticket-sold h-32 w-80 border-2 border-lime-500 rounded-3xl bg-white md:border-b-2 md:border-t-0 md:border-x-0 flex items-center justify-center gap-5">
+                    <i class="achievement-icons fa-solid fa-ticket text-3xl"></i>
+                    <div class="achievement-text-container">
+                        <p class="achievement-large-text text-4xl font-bold">1.7 Lacks</p>
+                        <p class="achievement-small-text text-lg">Tickets Sold</p>
+                    </div>
+                </div>
+                <div class="rental-partners h-32 w-80 border-2 border-lime-500 rounded-3xl bg-white md:border-b-2 md:border-t-0 md:border-x-0 flex items-center justify-center gap-5">
+                    <i class="achievement-icons fa-solid fa-truck-moving text-3xl"></i>
+                    <div class="achieve-text-container">
+                        <p class="achievement-large-text text-4xl font-bold">80K+</p>
+                        <p class="achievement-small-text text-lg">Rental Partners</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- coupon section -->
+             <h3 class="text-4xl text-center font-bold md:mt-20 mt-10">Best Offers For You</h3>
+            <section class="coupon-section w-9/12 mx-auto my-10 flex flex-col gap-10 md:flex-row md:justify-between md:gap-15 md:my-30">
+                <div class="coupon-sticker text-base flex items-center justify-center gap-6 md:gap-20 h-52 p-4 md:w-140 rounded-xl">
+                    <div class="discount-part">
+                        <p class="text1 text-3xl font-black md:text-5xl md:mb-4">15% OFF</p>
+                        <p class="text2 text font-semibold md:mb-2">on your next purchase</p>
+                        <p class="text3 font-semibold">use by January 2026</p>
+                    </div>
+                    <div class="code-part text-center">
+                        <p class="coupon-code text-4xl font-semibold md:mb-4">NEW15</p>
+                        <p class="text4 text-xl">Coupon Code</p>
+                    </div>
+                </div>
+                <div class="coupon-sticker2 text-base flex items-center justify-center gap-6 md:gap-20 h-52 p-4 md:w-140 rounded-xl">
+                    <div class="discount-part">
+                        <p class="text1 text-3xl font-black md:text-5xl md:mb-4">20% OFF</p>
+                        <p class="text2 text font-semibold md:mb-2">on your next purchase</p>
+                        <p class="text3 font-semibold">use by January 2026</p>
+                    </div>
+                    <div class="code-part text-center">
+                        <p class="coupon-code text-4xl font-semibold md:mb-4">Couple20</p>
+                        <p class="text4 text-xl">Coupon Code</p>
+                    </div>
+                </div>
+            </section>
+
+            <!-- all offer button -->
+            <button class="all-offer-btn border-1 py-4 px-6 text-xl font-semibold block mx-auto rounded-xl">See All Offers</button>
         </header>
         <main></main>
         <footer></footer>
