created transportation details section

--- a/index.html
+++ b/index.html
@@ -122,21 +122,21 @@
 
             <!-- achievement section -->
             <div class="achievement-section flex flex-col items-center gap-5 md:flex-row w-10/12 mx-auto md:justify-center md:gap-10 md:-mt-20 lg:-mt-26">
-                <div class="registered-users h-32 w-80 border-2 border-lime-500 rounded-3xl bg-white md:border-b-2 md:border-t-0 md:border-x-0 flex items-center justify-center gap-5">
+                <div class="registered-users h-32 w-80 border-2 rounded-3xl bg-white md:border-b-2 md:border-t-0 md:border-x-0 flex items-center justify-center gap-5">
                     <i class="achievement-icons fa-solid fa-users-line text-3xl"></i>
                     <div class="achieve-text-container">
                         <p class="achievement-large-text text-4xl font-bold">500K+</p>
                         <p class="achievement-small-text text-lg">Registered Users</p>
                     </div>
                 </div>
-                <div class="ticket-sold h-32 w-80 border-2 border-lime-500 rounded-3xl bg-white md:border-b-2 md:border-t-0 md:border-x-0 flex items-center justify-center gap-5">
+                <div class="ticket-sold h-32 w-80 border-2 rounded-3xl bg-white md:border-b-2 md:border-t-0 md:border-x-0 flex items-center justify-center gap-5">
                     <i class="achievement-icons fa-solid fa-ticket text-3xl"></i>
                     <div class="achievement-text-container">
                         <p class="achievement-large-text text-4xl font-bold">1.7 Lacks</p>
                         <p class="achievement-small-text text-lg">Tickets Sold</p>
                     </div>
                 </div>
-                <div class="rental-partners h-32 w-80 border-2 border-lime-500 rounded-3xl bg-white md:border-b-2 md:border-t-0 md:border-x-0 flex items-center justify-center gap-5">
+                <div class="rental-partners h-32 w-80 border-2 rounded-3xl bg-white md:border-b-2 md:border-t-0 md:border-x-0 flex items-center justify-center gap-5">
                     <i class="achievement-icons fa-solid fa-truck-moving text-3xl"></i>
                     <div class="achieve-text-container">
                         <p class="achievement-large-text text-4xl font-bold">80K+</p>
@@ -147,8 +147,8 @@
 
             <!-- coupon section -->
              <h3 class="text-4xl text-center font-bold md:mt-20 mt-10">Best Offers For You</h3>
-            <section class="coupon-section w-9/12 mx-auto my-10 flex flex-col gap-10 md:flex-row md:justify-between md:gap-15 md:my-30">
-                <div class="coupon-sticker text-base flex items-center justify-center gap-6 md:gap-20 h-52 p-4 md:w-140 rounded-xl">
+            <section class="coupon-section w-11/12 mx-auto my-10 flex flex-col gap-10 md:flex-row md:justify-around md:my-30">
+                <div class="coupon-sticker text-base flex items-center justify-center gap-6 md:gap-20 h-64 p-4 md:w-140 rounded-xl">
                     <div class="discount-part">
                         <p class="text1 text-3xl font-black md:text-5xl md:mb-4">15% OFF</p>
                         <p class="text2 text font-semibold md:mb-2">on your next purchase</p>
@@ -159,7 +159,7 @@
                         <p class="text4 text-xl">Coupon Code</p>
                     </div>
                 </div>
-                <div class="coupon-sticker2 text-base flex items-center justify-center gap-6 md:gap-20 h-52 p-4 md:w-140 rounded-xl">
+                <div class="coupon-sticker2 text-base flex items-center justify-center gap-6 md:gap-20 h-64 p-4 md:w-140 rounded-xl">
                     <div class="discount-part">
                         <p class="text1 text-3xl font-black md:text-5xl md:mb-4">20% OFF</p>
                         <p class="text2 text font-semibold md:mb-2">on your next purchase</p>
@@ -173,9 +173,63 @@
             </section>
 
             <!-- all offer button -->
-            <button class="all-offer-btn border-1 py-4 px-6 text-xl font-semibold block mx-auto rounded-xl">See All Offers</button>
+            <button class="all-offer-btn border-1 py-4 px-6 text-xl font-semibold block mx-auto rounded-xl my-20">See All Offers</button>
         </header>
-        <main></main>
+        <main>
+            <!-- functional section -->
+            <section class="functional-section h-300 rounded-t-4xl bg-black w-11/12 mx-auto md:w-9/12 md:mx-auto border-t-2 rounded-t-4xl">
+                <!-- paribahan details -->
+                <section class="paribahan-details">
+                    <h2 class="text-center text-3xl text-black font-semibold pt-20 md:text-5xl">P.H Paribahan</h2>
+                    <p class="paribahan-details-description text-base text-center w-9/12 mx-auto my-5">Yes, you can run unit tests and view the results directly within the app. The integrated<br>testing features allow for a streamlined .</p>
+                </section>
+
+                <!-- transportation details -->
+                <section class="transportation-details bg-white h-220 md:h-150 md:h-120 lg:h-90 w-11/12 mx-auto md:h-92 md:w-11/12 md:mx-auto rounded-3xl flex flex-col justify-around md:items-center lg:flex-row">
+                <div class="transport-all-details">
+                    <div class="transport-basic-details p-8 md:p-5 flex flex-col gap-10 md:flex-row md:justify-between">
+                        <div class="transport-names flex flex-col text-center md:text-left items-center md:flex-row md:gap-4">
+                            <i class="fa-solid fa-bus-side text-4xl"></i>
+                            <div>
+                                <p class="text-3xl font-bold">Greenline Paribahan</p>
+                                <p class="text-base">Coach-009-WEB ! AC_Business</p>
+                            </div>
+                        </div>
+                        <button class="transport-seat border-1 p-2 text-base font-semibold rounded-xl"><i class="text-xl fa-solid fa-chair"></i> 40 Seats Left</button>
+                    </div>
+                    <div class="transport-departure-details h-92 md:h-68 lg:h-58 w-11/12 md:w-11/12 mx-auto rounded-3xl">
+                        <div class="departure-text-1 flex justify-around my-5 pt-5 md:justify-between md:px-5">
+                            <p>Route</p>
+                            <p>Dhaka - Sylhet</p>
+                        </div>
+                        <hr>
+                        <div class="departure-text-2 flex justify-around my-5 md:justify-between md:px-5">
+                            <p>Departure-time</p>
+                            <p>9.00 PM</p>
+                        </div>
+                        <hr>
+                        <div class="boarding-drop-time flex flex-col gap-5 w-11/12 mx-auto md:flex-row mt-5 md:justify-between">
+                            <button class="boarding-btns boarding-point p-3 block rounded-xl">Boarding Point - Laxmipur</button>
+                            <button class="boarding-btns departure-point p-3 block rounded-xl">Dropping Point - Bogura</button>
+                            <button class="boarding-btns estimate-time p-3 block rounded-xl">Est. Time - 11 Hour</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="vertical-line border-r-xl h-full hidden lg:block"></div>
+                <div class="ticket-price flex flex-col text-center items-center">
+                    <i class="text-2xl fa-solid fa-bangladeshi-taka-sign bdt"></i>
+                    <p class="font-bold text-3xl">550 Taka</p>
+                    <p class="font-medium text-xl">Per Seat</p>
+                </div>
+                </section>
+
+                <!-- seat-selection-section -->
+                <section class="seat-selection-section">
+
+                </section>
+                
+            </section>
+        </main>
         <footer></footer>
 
         <!-- Script File -->
