--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         </header>
         <main>
             <!-- functional section -->
-            <section class="functional-section h-300 rounded-t-4xl bg-black w-11/12 mx-auto md:w-9/12 md:mx-auto border-t-2 rounded-t-4xl">
+            <section class="functional-section h-600 rounded-t-4xl bg-black w-11/12 mx-auto md:w-9/12 md:mx-auto border-t-2 rounded-t-4xl">
                 <!-- paribahan details -->
                 <section class="paribahan-details">
                     <h2 class="text-center text-3xl text-black font-semibold pt-20 md:text-5xl">P.H Paribahan</h2>
@@ -224,10 +224,80 @@
                 </section>
 
                 <!-- seat-selection-section -->
-                <section class="seat-selection-section">
-
+                <section class="seat-selection-section bg-white h-500 md:w-11/12 md:mx-auto rounded-3xl mt-20">
+                    <section class="bus-seat-layout">
+                        <h3 class="seat-layout-heading text-2xl font-semibold mx-5">Select Your Seat</h3>
+                        <hr class="my-5 mx-5">
+                        <div class="seat-availability flex justify-between mx-5 my-5">
+                            <p class="text-xl"><i class="fa-solid fa-chair available-seat"></i> Available</p>
+                            <p class="text-xl"><i class="fa-solid fa-chair selected-seat"></i> Selected</p>
+                        </div>
+                        <hr class="my-5 pb-5 mx-5">
+                        <section class="bus-seats flex justify-between gap-5 md:mx-5">
+                            <section class="seat-letters grid grid-cols-1 gap-5">
+                                <button class="seat-letter">A</button>
+                                <button class="seat-letter">B</button>
+                                <button class="seat-letter">C</button>
+                                <button class="seat-letter">D</button>
+                                <button class="seat-letter">E</button>
+                                <button class="seat-letter">F</button>
+                                <button class="seat-letter">G</button>
+                                <button class="seat-letter">H</button>
+                                <button class="seat-letter">I</button>
+                                <button class="seat-letter">J</button>
+                            </section>
+                            <section class="bus-left grid gap-5 grid-cols-2 text-center">
+                                <button class="seat-numbers">A1</button>
+                                <button class="seat-numbers">A2</button>
+                                <button class="seat-numbers">B1</button>
+                                <button class="seat-numbers">B2</button>
+                                <button class="seat-numbers">C1</button>
+                                <button class="seat-numbers">C2</button>
+                                <button class="seat-numbers">D1</button>
+                                <button class="seat-numbers">D2</button>
+                                <button class="seat-numbers">E1</button>
+                                <button class="seat-numbers">E2</button>
+                                <button class="seat-numbers">F1</button>
+                                <button class="seat-numbers">F2</button>
+                                <button class="seat-numbers">G1</button>
+                                <button class="seat-numbers">G2</button>
+                                <button class="seat-numbers">H1</button>
+                                <button class="seat-numbers">H2</button>
+                                <button class="seat-numbers">I1</button>
+                                <button class="seat-numbers">I2</button>                                
+                                <button class="seat-numbers">J1</button>
+                                <button class="seat-numbers">J2</button>
+                            </section>
+                            <section class="bus-right grid grid-cols-2 gap-5">
+                                <button class="seat-numbers">A3</button>
+                                <button class="seat-numbers">A4</button>
+                                <button class="seat-numbers">B3</button>
+                                <button class="seat-numbers">B4</button>
+                                <button class="seat-numbers">C3</button>
+                                <button class="seat-numbers">C4</button>
+                                <button class="seat-numbers">D3</button>
+                                <button class="seat-numbers">D4</button>
+                                <button class="seat-numbers">E3</button>
+                                <button class="seat-numbers">E4</button>
+                                <button class="seat-numbers">F3</button>
+                                <button class="seat-numbers">F4</button>
+                                <button class="seat-numbers">G3</button>
+                                <button class="seat-numbers">G4</button>
+                                <button class="seat-numbers">H3</button>
+                                <button class="seat-numbers">H4</button>
+                                <button class="seat-numbers">I3</button>
+                                <button class="seat-numbers">I4</button>
+                                <button class="seat-numbers">J3</button>
+                                <button class="seat-numbers">J4</button>
+                            </section>
+                        </section>
+                    </section>
+                    <div class="divider h-full hidden md:block"></div>
+                    <section class="ticket-confirmation-layout">
+                        
+                    </section>
                 </section>
-                
+
             </section>
         </main>
         <footer></footer>
