--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         </header>
         <main>
             <!-- functional section -->
-            <section class="functional-section h-600 rounded-t-4xl bg-black w-11/12 mx-auto md:w-9/12 md:mx-auto border-t-2 rounded-t-4xl">
+            <section class="functional-section h-735 md:h-660 lg:h-425 rounded-t-4xl bg-black border-t-2 rounded-t-4xl">
                 <!-- paribahan details -->
                 <section class="paribahan-details">
                     <h2 class="text-center text-3xl text-black font-semibold pt-20 md:text-5xl">P.H Paribahan</h2>
@@ -186,7 +186,7 @@
 
                 <!-- transportation details -->
                 <section class="transportation-details bg-white h-220 md:h-150 md:h-120 lg:h-90 w-11/12 mx-auto md:h-92 md:w-11/12 md:mx-auto rounded-3xl flex flex-col justify-around md:items-center lg:flex-row">
-                <div class="transport-all-details">
+                <div class="transport-all-details lg:w-8/12">
                     <div class="transport-basic-details p-8 md:p-5 flex flex-col gap-10 md:flex-row md:justify-between">
                         <div class="transport-names flex flex-col text-center md:text-left items-center md:flex-row md:gap-4">
                             <i class="fa-solid fa-bus-side text-4xl"></i>
@@ -224,17 +224,17 @@
                 </section>
 
                 <!-- seat-selection-section -->
-                <section class="seat-selection-section bg-white h-500 md:w-11/12 md:mx-auto rounded-3xl mt-20">
-                    <section class="bus-seat-layout">
-                        <h3 class="seat-layout-heading text-2xl font-semibold mx-5">Select Your Seat</h3>
+                <section class="seat-selection-section mx-2 bg-white h-420 md:w-11/12 md:mx-auto rounded-3xl mt-20 lg:flex lg:justify-around lg:h-250">
+                    <section class="bus-seat-layout lg:w-6/12">
+                        <h3 class="seat-layout-heading text-2xl font-semibold mx-5 pt-5">Select Your Seat</h3>
                         <hr class="my-5 mx-5">
                         <div class="seat-availability flex justify-between mx-5 my-5">
                             <p class="text-xl"><i class="fa-solid fa-chair available-seat"></i> Available</p>
                             <p class="text-xl"><i class="fa-solid fa-chair selected-seat"></i> Selected</p>
                         </div>
                         <hr class="my-5 pb-5 mx-5">
-                        <section class="bus-seats flex justify-between gap-5 md:mx-5">
-                            <section class="seat-letters grid grid-cols-1 gap-5">
+                        <section class="bus-seats flex justify-evenly gap-5 md:mx-5">
+                            <section class="seat-letters grid grid-cols-1 gap-5 lg:gap-10">
                                 <button class="seat-letter">A</button>
                                 <button class="seat-letter">B</button>
                                 <button class="seat-letter">C</button>
@@ -246,58 +246,105 @@
                                 <button class="seat-letter">I</button>
                                 <button class="seat-letter">J</button>
                             </section>
-                            <section class="bus-left grid gap-5 grid-cols-2 text-center">
-                                <button class="seat-numbers">A1</button>
-                                <button class="seat-numbers">A2</button>
-                                <button class="seat-numbers">B1</button>
-                                <button class="seat-numbers">B2</button>
-                                <button class="seat-numbers">C1</button>
-                                <button class="seat-numbers">C2</button>
-                                <button class="seat-numbers">D1</button>
-                                <button class="seat-numbers">D2</button>
-                                <button class="seat-numbers">E1</button>
-                                <button class="seat-numbers">E2</button>
-                                <button class="seat-numbers">F1</button>
-                                <button class="seat-numbers">F2</button>
-                                <button class="seat-numbers">G1</button>
-                                <button class="seat-numbers">G2</button>
-                                <button class="seat-numbers">H1</button>
-                                <button class="seat-numbers">H2</button>
-                                <button class="seat-numbers">I1</button>
-                                <button class="seat-numbers">I2</button>                                
-                                <button class="seat-numbers">J1</button>
-                                <button class="seat-numbers">J2</button>
+                            <section class="bus-left grid gap-5 grid-cols-2 text-center lg:gap-10">
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">A1</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">A2</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">B1</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">B2</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">C1</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">C2</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">D1</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">D2</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">E1</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">E2</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">F1</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">F2</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">G1</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">G2</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">H1</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">H2</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">I1</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">I2</button>                                
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">J1</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">J2</button>
                             </section>
-                            <section class="bus-right grid grid-cols-2 gap-5">
-                                <button class="seat-numbers">A3</button>
-                                <button class="seat-numbers">A4</button>
-                                <button class="seat-numbers">B3</button>
-                                <button class="seat-numbers">B4</button>
-                                <button class="seat-numbers">C3</button>
-                                <button class="seat-numbers">C4</button>
-                                <button class="seat-numbers">D3</button>
-                                <button class="seat-numbers">D4</button>
-                                <button class="seat-numbers">E3</button>
-                                <button class="seat-numbers">E4</button>
-                                <button class="seat-numbers">F3</button>
-                                <button class="seat-numbers">F4</button>
-                                <button class="seat-numbers">G3</button>
-                                <button class="seat-numbers">G4</button>
-                                <button class="seat-numbers">H3</button>
-                                <button class="seat-numbers">H4</button>
-                                <button class="seat-numbers">I3</button>
-                                <button class="seat-numbers">I4</button>
-                                <button class="seat-numbers">J3</button>
-                                <button class="seat-numbers">J4</button>
-                            </section>
+                            <section class="bus-right grid  grid-cols-2 gap-5 lg:gap-10">
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">A3</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">A4</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">B3</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">B4</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">C3</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">C4</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">D3</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">D4</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">E3</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">E4</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">F3</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">F4</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">G3</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">G4</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">H3</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">H4</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">I3</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">I4</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">J3</button>
+                                <button class="seat-numbers lg:!w-15 lg:!h-11">J4</button>
+                            </section> 
                         </section>
                     </section>
-                    <div class="divider h-full hidden md:block"></div>
-                    <section class="ticket-confirmation-layout">
-                        
+
+                    <div class="divider h-242 hidden lg:block"></div>
+
+                    <section class="ticket-confirmation-layout lg:w-5/12">
+                        <h3 class="seat-layout-heading text-2xl font-semibold mx-5 pt-5">Select Your Seat</h3>
+                        <hr class="mx-5 my-5">
+                        <section class="seat-pricing-section rounded-xl mx-5">
+                            <div class="pricing-headers flex justify-between mx-5 my-4 pt-5">
+                                <h4 class="seat-count font-semibold text-base">Seat <span class="seats-count-bg rounded-sm">4</span></h4>
+                                <h4 class="seat-class font-semibold text-base">Class</h4>
+                                <h4 class="seat-price font-semibold text-base">Price</h4>
+                            </div>
+                            <hr class="mx-5 my-5">
+                            <div class="pricing-details">
+                                <div class="flex justify-between mx-5">
+                                    <p>C1</p>
+                                    <p>Economy</p>
+                                    <p>550</p>
+                                </div>
+                            </div>
+                            <hr class="mx-5 my-5">
+                            <div class="price-ending flex justify-between mx-5">
+                                <p class="text-base font-semibold">Total Price</p>
+                                <p class="text-base font-semibold">BDT 1100</p>
+                            </div>
+                            <div class="coupon-field flex flex-col">
+                                <input class="bg-white border-none rounded-xl mx-5 h-14 pl-5 my-5" type="text" placeholder="Have any coupon?">
+                                <button class="apply-btn text-white font-semibold text-xl mx-5 p-2 rounded-xl">Apply</button>
+                            </div>
+                            <div class="grand-total-price flex justify-between mx-5 my-5 pb-5">
+                                <p class="font-semibold text-base">Grand Total</p>
+                                <p class="font-semibold text-base">BDT 1100</p>
+                            </div>
+                        </section>
+                        <section class="passanger-details-input mx-5">
+                            <label class="inline-block mt-5 font-semibold" for="passanger-name">Passanger Name*</label> <br>
+                            <input id="passanger-name"  class="w-full h-14 p-4 mt-2 rounded-xl" type="text" placeholder="Enter your name"> <br>
+
+                            <label class="inline-block mt-5 font-semibold" for="phone-number">Phone number*</label> <br>
+                            <input id="phone-number" class="w-full h-14 p-4 mt-2 rounded-xl" type="text" placeholder="Enter your phone number"> <br>
+
+                            <label class="inline-block mt-5 font-semibold"  for="email-id">Email ID</label> <br>
+                            <input id="email-id" class="w-full h-14 p-4 mt-2 rounded-xl" type="email" placeholder="Enter your email id"> <br>
+
+                            <input class="info-submit-btn w-full p-4 mt-5 rounded-2xl text-white font-semibold text-xl" type="submit" value="Next">
+
+                            <div class="terms-contidion flex justify-between mx-5 my-5 text-sm">
+                                <p class="underline underline-offset-2 font-medium">Terms and Conditions</p>
+                                <p class="underline underline-offset-2 font-medium">Cancellation Policy</p>
+                            </div>
+                        </section>
                     </section>
                 </section>
-
             </section>
         </main>
         <footer></footer>
