complete functional design reviewed

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             fugiat ut assumenda excepturi exercitationem quasi.
                             In deleniti eaque aut repudiandae et a id nisi.
                         </p>
-                        <button class="buy-ticket-btn btn btn-primary border-none font-bold text-base px-6 py-4">Buy Tickets</button>
+                        <a href="#seat-booking-section" class="buy-ticket-btn btn btn-primary border-none font-bold text-base px-6 py-4">Buy Tickets</a>
                     </div>
                 </div>
             </div>
@@ -224,7 +224,7 @@
                 </section>
 
                 <!-- seat-selection-section -->
-                <section class="seat-selection-section mx-2 bg-white h-420 md:w-11/12 md:mx-auto rounded-3xl mt-20 lg:flex lg:justify-around lg:h-250">
+                <section id="seat-booking-section" class="seat-selection-section mx-2 bg-white h-420 md:w-11/12 md:mx-auto rounded-3xl mt-20 lg:flex lg:justify-around lg:h-250">
                     <section class="bus-seat-layout lg:w-6/12">
                         <h3 class="seat-layout-heading text-2xl font-semibold mx-5 pt-5">Select Your Seat</h3>
                         <hr class="my-5 mx-5">
@@ -307,9 +307,7 @@
                             <hr class="mx-5 my-5">
                             <div class="pricing-details">
                                 <div class="flex justify-between mx-5">
-                                    <p>C1</p>
-                                    <p>Economy</p>
-                                    <p>550</p>
+                                    
                                 </div>
                             </div>
                             <hr class="mx-5 my-5">
