footer design complete

--- a/index.html
+++ b/index.html
@@ -345,7 +345,16 @@
                 </section>
             </section>
         </main>
-        <footer></footer>
+        <footer>
+            <section class="flex items-center h-80 footer-part justify-center">
+                <section class="text-center">
+                <h2 class="footer-heading text-white text-4xl font-bold pt-5 mb-5">P-Ticket</h2>
+                <p class="footer-description text-white w-11/12 mx-auto">P-Ticket is a digital platform to make your <br> daily commuting better.</p>
+                <hr class="footer-hr mx-5 my-5">
+                <p class="footer-copyright text-white w-11/12 mx-auto">@all rights reserved, P-Ticket services limited.2024</p>
+            </section>
+            </section>
+        </footer>
 
         <!-- Script File -->
         <script src="./script.js"></script>
