--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                         <hr class="mx-5 my-5">
                         <section class="seat-pricing-section rounded-xl mx-5">
                             <div class="pricing-headers flex justify-between mx-5 my-4 pt-5">
-                                <h4 class="seat-count font-semibold text-base">Seat <span class="seats-count-bg rounded-sm">4</span></h4>
+                                <h4 class="seat-count font-semibold text-base">Seat <span id="count-seat" class="seats-count-bg rounded-sm">0</span></h4>
                                 <h4 class="seat-class font-semibold text-base">Class</h4>
                                 <h4 class="seat-price font-semibold text-base">Price</h4>
                             </div>
@@ -311,15 +311,15 @@
                             <hr class="mx-5 my-5">
                             <div class="price-ending flex justify-between mx-5">
                                 <p class="text-base font-semibold">Total Price</p>
-                                <p class="text-base font-semibold">BDT 1100</p>
+                                <p class="text-base font-semibold">BDT <span id="total-price-value">0</span></p>
                             </div>
                             <div class="coupon-field flex flex-col">
-                                <input class="bg-white border-none rounded-xl mx-5 h-14 pl-5 my-5" type="text" placeholder="Have any coupon?">
+                                <input id="coupon-code-place-field" class="bg-white border-none rounded-xl mx-5 h-14 pl-5 my-5" type="text" placeholder="Have any coupon?">
                                 <button id="apply-button" disabled class="apply-btn text-white font-semibold text-xl mx-5 p-2 rounded-xl">Apply</button>
                             </div>
                             <div class="grand-total-price flex justify-between mx-5 my-5 pb-5">
                                 <p class="font-semibold text-base">Grand Total</p>
-                                <p class="font-semibold text-base">BDT 1100</p>
+                                <p class="font-semibold text-base">BDT <span id="grand-total-price-value">0</span></p>
                             </div>
                         </section>
                         <section class="passanger-details-input mx-5">
