--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                             <label class="inline-block mt-5 font-semibold"  for="email-id">Email ID</label> <br>
                             <input id="email-id" class="w-full h-14 p-4 mt-2 rounded-xl" type="email" placeholder="Enter your email id"> <br>
 
-                            <input class="info-submit-btn w-full p-4 mt-5 rounded-2xl text-white font-semibold text-xl" type="submit" value="Next">
+                            <input id="next-btn-success" onclick="location.href='./success.html'" class="info-submit-btn w-full p-4 mt-5 rounded-2xl text-white font-semibold text-xl" type="submit" value="Next">
 
                             <div class="terms-contidion flex justify-between mx-5 my-5 text-sm">
                                 <p class="underline underline-offset-2 font-medium">Terms and Conditions</p>
