--- a/success.html
+++ b/success.html
@@ -28,7 +28,7 @@
             <h2 class="success-green text-6xl font-bold my-10">SUCCESS</h2>
             <p class="success-message1 text-base font-bold mt-10">Thank you for Booking Our Bus Seats.<br>We are working hard to find the best service and deals for you</p>
             <p class="success-message2 my-2">Shortly you will find a confirmation in your email.</p>
-            <button class="continue-btn text-white px-10 py-2 text-2xl rounded-4xl font-semibold my-10">Continue</button>
+            <button id="continue-btns" onclick="location.href='./index.html'" class="continue-btn text-white px-10 py-2 text-2xl rounded-4xl font-semibold my-10">Continue</button>
         </section>
     </body>
 </html>
